	dead-lock.
	(twittering-oauth-get-token-alist-native): confirm the process
	status in order to avoid dead-lock. If the process exited
	abnormally, the variable `result' becomes nil.
	(twittering-oauth-get-token-alist-curl): likewise.
	(twittering-verify-credentials): wait for the process to exit
	in order to avoid dead-lock.
	(twittering-get-list-index-sync): likewise.

2010-06-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-write-and-encrypt): fix arguments
	of `epg-context-set-progress-callback' because of the difference
	between EasyPG 0.0.16 and that included in Emacs23.

	* twittering-mode.el (twittering-save-private-info): change the
	permission of the encrypted file in order to prevent others from
	reading the file.
	(twittering-write-and-encrypt): return t explicitly when it
	succeeded in encrypting private information.

	* twittering-mode.el (twittering-write-and-encrypt): In order to
	prevent `epa-file' to encrypt the file double,
	`epa-file-name-regexp' is temorarily changed into the null regexp
	that never matches any string.

2010-06-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix bugs.
	(twittering-hmac-sha1): remove invalid arguments.
	(twittering-oauth-auth-str): correct a variable.

	* twittering-mode.el: Support master password for storing private
	information in an encrypted file.
	(twittering-use-master-password): new variable.
	(twittering-private-info-file): new variable.
	(twittering-variables-stored-with-encryption): new variable.
	(twittering-load-private-info): new function.
	(twittering-load-private-info-with-guide): new function.
	(twittering-save-private-info): new function.
	(twittering-save-private-info-with-guide): new function.
	(twittering-capable-of-encryption-p): new function.
	(twittering-read-from-encrypted-file): new function.
	(twittering-write-and-encrypt): new function.
	(twittering-verify-credentials): support master password.
